<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollpanel">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_meeting"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
...
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint = "Event Name"
        android:ems="10"
        android:id="@+id/eventName"
        android:layout_weight="2"/>


        <TextView
            android:text="Length of Meeting"
            android:layout_height="wrap_content"
...
            android:layout_width="wrap_content"
            android:id="@+id/tvHours" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerLengthMinute" />
        <TextView
            android:text="Minutes"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tvMinutes" />

...
      android:orientation="horizontal"
      android:paddingTop="10dp"
      android:paddingBottom="10dp">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerBeginHour" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"/>

        <Spinner
...
      android:orientation="horizontal"
      android:paddingTop="10dp"
      android:paddingBottom="10dp">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerEndHour" />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=":"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerEndMinute" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerEndToD" />


    </LinearLayout>

    <DatePicker
        android:layout_width="wrap_content"
...
    <Button
        android:text="Create Meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="13dp"
        android:id="@+id/btnCreateMeeting"
        android:onClick="addMeeting" />



</LinearLayout>
</ScrollView>
