<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/add_member_to_group"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="16dp"
  android:orientation="vertical"
  tools:context="com.example.android.groupschedulecoordinator.AddMemberToGroup">

  <TextView
    android:text="Add New Member"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:id="@+id/textView2"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:text="Member Name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="16dp"
      android:id="@+id/tvMemberName" />

    <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:ems="10"
      android:layout_marginTop="0dp"
      android:id="@+id/tbMemberName" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal">

    <TextView
      android:text="Member Email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="16dp"
      android:id="@+id/tvMemberEmail" />

    <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:ems="10"
      android:id="@+id/tbMemberEmail"
      android:hint="example@gmail.com" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:orientation="horizontal"
      android:gravity = "center">

     <Button
      android:text="Add Member"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="13dp"
      android:id="@+id/btnCreateGroup"
      android:onClick="addMember"
      android:layout_gravity="center_horizontal" />

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:id="@+id/btnCancel"
        android:layout_gravity="center_horizontal"
        android:onClick="cancelMember"
        />


  </LinearLayout>



</LinearLayout>
